# ScirocEpisode1

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  ReadMe.md  bug_report.md  test.txt
docker/ws/src/Sciroc2EP1-SimulatedEnv-master/: CMakeLists.txt  README.md  package.xml
docker/ws/src/Sciroc2EP1-SimulatedEnv-master/launch/: pal_gazebo.launch  scene_editor_ep1.launch  tiago_ep1.launch
docker/ws/src/Sciroc2EP1-SimulatedEnv-master/model_human_remove/Man_seated_paper/: model.dae
docker/ws/src/Sciroc2EP1-SimulatedEnv-master/model_human_remove/seated+woman/: model.dae
docker/ws/src/Sciroc2EP1-SimulatedEnv-master/models/bifrutas_tropical_can/: model.config
docker/ws/src/Sciroc2EP1-SimulatedEnv-master/models/biscuits_pack/: model.config
docker/ws/src/Sciroc2EP1-SimulatedEnv-master/models/cocacola/: model.config
docker/ws/src/Sciroc2EP1-SimulatedEnv-master/models/human_seated/: model.config  model.sdf
docker/ws/src/Sciroc2EP1-SimulatedEnv-master/models/human_seated_woman/: model.config  model.sdf
docker/ws/src/Sciroc2EP1-SimulatedEnv-master/models/pringles1/: model.config  model.sdf
docker/ws/src/Sciroc2EP1-SimulatedEnv-master/models/pringles2/: model.config
docker/ws/src/Sciroc2EP1-SimulatedEnv-master/models/sprite/: model.config
docker/ws/src/Sciroc2EP1-SimulatedEnv-master/src/: sciroc_ep1_object_manager_node.py
docker/ws/src/Sciroc2EP1-SimulatedEnv-master/srv/: ChangeTheItem.srv  GetThreeOrderedItems.srv  MoveItemsOnClosestTable.srv
docker/ws/src/Sciroc2EP1-SimulatedEnv-master/worlds/: Coffe-Shop-EP1  ep1-world.sdf
(+306 files in other folders)
